# ticket_reserve

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.debug  Dockerfile.test  Makefile  README.md  cliff.toml  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  ruff.toml  startup.sh
app/: main.py  tasks.py
app/core/: celery_config.py  redis_sonfig.py
app/database/: db.py
app/models/: books.py  events.py
app/routes/: bookings.py  events.py  reports.py
app/schemas/: books.py  events.py  reports.py
app/services/: bookings.py
app/tests/: conftest.py  test_api.py  test_celery.py  test_models.py  test_race_condition.py  test_redis.py  test_services.py
